Create more components - Use Materialize.css - Add Tweet component - Add TweetBox component - Add TweetList component - Install and configure dependencies: babel, react, react-dom, webpack - Install react-on-rails gem - Add bundle.js into the rails asset pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 
 # Ignore redis binary dump (dump.rdb) files
  *.rdb
+
+# Ignore bundle.js.map
+/app/assets/javascripts/bundle.js.map
+
+# Ignore node_modules
+node_modules/
