--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/bntzio/twitter-clone/issues"
   },
-  "homepage": "https://github.com/bntzio/twitter-clone#readme"
+  "homepage": "https://github.com/bntzio/twitter-clone#readme",
+  "dependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "webpack": "^1.13.0"
+  }
 }
