--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "events": "^1.1.0",
+    "flux": "^2.1.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "webpack": "^1.13.0"
