--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
     "webpack": "^1.13.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1"
   }
 }
